pocs/go-istio-auth0/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: book-service
  labels:
    istio-injection: enabled
