pocs/go-istio-auth0/deploy/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: book-service-gateway
  namespace: book-service
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "books.example.com"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: book-service
  namespace: book-service
spec:
  hosts:
    - "books.example.com"
  gateways:
    - book-service-gateway
  http:
    - route:
        - destination:
            host: book-service.book-service.svc.cluster.local
            port:
              number: 80
